--- a/style.css
+++ b/style.css
@@ -1,10 +1,27 @@
 html {
+
 }
 
 .navigationBar {
-    background-image: radial-gradient(rgb(90, 92, 93), white);
+    background-image: radial-gradient(#a0b842, #70822e);
     background-size: cover;
     background-repeat: no-repeat;
+    opacity: .6;
+    z-index: -1;
     text-align: center;
     justify-content: left;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #287aa9;
 }
+
+#aboutFirst {
+    background-image: url('/docs/images/20170910_133844.jpg');
+    background-attachment: scroll;
+    opacity: .8;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
+
